# svc15

./: .gitignore  CMakeLists.txt
include/: symbiotic.h
lib/: CMakeLists.txt  lib.c  memalloc.c
scripts/: CMakeLists.txt  build-fix.sh  process_set.sh  runme
src/: CMakeLists.txt  Prepare.cpp
